--- a/www/index.html
+++ b/www/index.html
@@ -47,12 +47,12 @@
       <div class="wrapper">
         <menu class="options">
           <ul class="reset-list" role="list">
-            <li role="listitem"><a href="#">[Insert Contact]</a></li>
+            <li role="listitem"><a href="#"><label for="task">[Insert Contact]</label></a></li>
           </ul>
         </menu>
 
         <form aria-owns="btn-add-done">
-          <input type="text" name="task" required>
+          <input type="text" name="task" id="task" required>
         </form>
       </div>
     </section>
