--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+
   <link rel="stylesheet" href="css/app.css">
   <script defer data-main="js/app" src="js/lib/require.js"></script>
 </head>
@@ -11,13 +13,15 @@
     </header>
 
     <article class="view-content">
-      <ul class="todo-list reset-list" role="list">
+      <ul id="todo-list" class="todo-list reset-list" role="list">
         <li role="listitem">
           <label>
             <input type="checkbox">
             <span>My task 1</span>
           </label>
+
           <input type="text" aria-hidden="true">
+          <button class="btn edit"><span>Edit</span></button>
         </li>
 
         <li role="listitem">
@@ -25,15 +29,17 @@
             <input type="checkbox" checked>
             <span>My task 2</span>
           </label>
+
           <input type="text" aria-hidden="true">
+          <button class="btn edit"><span>Edit</span></button>
         </li>
       </ul>
     </article>
 
     <footer>
       <menu role="toolbar">
-        <button role="menuitem" class="btn-add"><span>Add</span></button>
-        <button role="menuitem" class="btn-del" disabled><span>Delete</span></button>
+        <button role="menuitem" class="btn add"><span>Add</span></button>
+        <button role="menuitem" class="btn del" disabled><span>Delete</span></button>
       </menu>
     </footer>
   </section><!--end view-todos-->
@@ -46,8 +52,8 @@
     <section class="view-content">
       <div class="wrapper">
         <menu class="options">
-          <ul class="reset-list" role="list">
-            <li role="listitem"><a href="#"><label for="task">[Insert Contact]</label></a></li>
+          <ul id="activities" class="reset-list" role="list">
+            <li role="listitem"><a class="add-contact" href="#"><label for="task">[Insert Contact]</label></a></li>
           </ul>
         </menu>
 
@@ -59,8 +65,8 @@
 
     <footer>
       <menu role="toolbar">
-        <button id="btn-add-done" role="menuitem" class="btn-done" disabled><span>Done</span></button>
-        <button role="menuitem" class="btn-del"><span>Cancel</span></button>
+        <button id="btn-add-done" role="menuitem" class="btn done" disabled><span>Done</span></button>
+        <button role="menuitem" class="btn del"><span>Cancel</span></button>
       </menu>
     </footer>
   </section><!--end view-add-->
