--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <article class="view-content">
-      <ul id="todo-list" class="todo-list reset-list" role="list">
+      <!-- <ul id="todo-list" class="todo-list reset-list" role="list">
         <li role="listitem">
           <label>
             <input type="checkbox">
@@ -33,7 +33,7 @@
           <input type="text" aria-hidden="true">
           <button class="btn edit"><span>Edit</span></button>
         </li>
-      </ul>
+      </ul> -->
     </article>
 
     <footer>
